[0.2.2.0 - Beta    xx/Mar/2008]
+ added frame-step button
+ values in property pages can now be selected and put into clipboard
+ added key shortcuts (ESC = stop, Space = Play/Pause toggle, Right arrow = frame step)
+ GraphStudio now displays list of available media types for unconnected pins

[0.2.1.0 - Beta	   15/Mar/2008]
+ more drawing fixes
+ added some more extensions into opendialog filters
+ added registered pin details and media types
+ added MPEG1VIDEOINFO and MPEG2VIDEOINFO structure details
+ property-tree integrated with the filters form
+ remote-graph bugfix (thanks to Christian Steindl)
+ Ctrl+G shortcut works also when connected to remote graph
+ added Render URL feature
+ added DirectConnect toggle
+ ActiveMovie Window now also contains filter name in the title

[0.2.0.0 - Beta    04/Mar/2008]
+ added filter details form
+ added pin details form
+ WAVEFORMATEX, VIDEOINFOHEADER, VIDEOINFOHEADER2 and BITMAPINFOHEADER are supported
+ property page drawing issues fixed
+ fixed bug with non-functional favorite filter links
+ better filter name detection

[0.1.9.0 - Alpha   24/Feb/2008]
+ added automatic graph restart schedule (currently only for 04:00 AM :) - don't ask why)
+ added capability to construct graphs from XML files
+ added extension filters for opening dialogs
+ added option to display filter name instead of filename of a source/sink filter
+ added link to filters form into the favorites form
+ added DEL keyboard shortcut to delete filters and groups
+ non-existing filters are marked with a red "(!)"

[0.1.8.0 - Alpha   17/Feb/2008]
+ favorite filters and managing form now work
+ DMO filters are displayed in green color
+ KSProxy filters are displayed in orange color

[0.1.7.0 - Alpha   14/Feb/2008]
+ .grf extension is now added automatically when saving graph
+ "Render Media File" behavior changed to reset&clear exiting graph
+ added "Add Media File" that has the original "Render Media File" functionality