@@ -3,6 +3,7 @@
 + values in property pages can now be selected and put into clipboard
 + added key shortcuts (ESC = stop, Space = Play/Pause toggle, Right arrow = frame step)
 + GraphStudio now displays list of available media types for unconnected pins
++ GraphStudio can accept a filename to open via command line
 
 [0.2.1.0 - Beta	   15/Mar/2008]
 + more drawing fixes
